Registering content scripts is broken
Categories
(Thunderbird :: Add-Ons: Extensions API, defect)
Tracking
(thunderbird_esr78 unaffected, thunderbird91+ fixed)
Tracking | Status | |
---|---|---|
thunderbird_esr78 | --- | unaffected |
thunderbird91 | + | fixed |
People
(Reporter: darktrojan, Assigned: darktrojan)
References
(Regression)
Details
(Keywords: regression)
Attachments
(3 files)
48 bytes,
text/x-phabricator-request
|
Details | Review | |
48 bytes,
text/x-phabricator-request
|
wsmwk
:
approval-comm-beta+
|
Details | Review |
48 bytes,
text/x-phabricator-request
|
wsmwk
:
approval-comm-beta+
|
Details | Review |
Sometime in the 90 cycle, registering ordinary content scripts broke. Neither registration by the manifest or by browser.contentScripts.register
work, AFAICT.
Updated•4 years ago
|
Updated•4 years ago
|
Updated•4 years ago
|
Assignee | ||
Comment 1•4 years ago
|
||
Gah! I found some of the problem. The toolkit code now checks the message manager group of the browser in question, but we use weird groups for the link handling behaviour.
Assignee | ||
Comment 2•4 years ago
|
||
Thunderbird uses these extra groups for special handling of links, and they need to be considered the same as the browsers group for WebExtensions purposes.
Assignee | ||
Comment 3•4 years ago
|
||
This patch doesn't completely solve the problem. I'm still not seeing the right behaviour when it comes to enumerating existing browsers, like injecting scripts into already-open tabs, or removing scripts if the extension shuts down. Any ideas would be appreciated, :zombie.
Assignee | ||
Updated•4 years ago
|
Assignee | ||
Comment 5•4 years ago
|
||
Assignee | ||
Comment 6•4 years ago
|
||
Depends on D119958
![]() |
||
Comment 7•4 years ago
|
||
bugherder |
Assignee | ||
Comment 8•4 years ago
|
||
Comment on attachment 9231130 [details]
Bug 1715434 - In Thunderbird, consider some extra message manager groups when injecting WebExt content scripts. r=zombie
Beta/Release Uplift Approval Request
- User impact if declined: Thunderbird extensions won't be able to use the contentScripts API for all of ESR 91. This does not affect Firefox.
- Is this code covered by automated tests?: Yes
- Has the fix been verified in Nightly?: Yes
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky):
- String changes made/needed:
Assignee | ||
Updated•4 years ago
|
Comment 9•4 years ago
|
||
Comment on attachment 9231130 [details]
Bug 1715434 - In Thunderbird, consider some extra message manager groups when injecting WebExt content scripts. r=zombie
Low risk in early betas, approved for uplift in 91 beta 4, thanks
Comment 10•4 years ago
|
||
bugherder uplift |
Updated•4 years ago
|
Comment 11•4 years ago
|
||
Pushed by mkmelin@iki.fi:
https://hg.mozilla.org/comm-central/rev/412c4661446b
Regression test for content scripts. r=john.bieling
https://hg.mozilla.org/comm-central/rev/fb9fe9eb149b
Update compose/message display script loading behaviour to match content scripts. r=john.bieling
Comment 12•4 years ago
•
|
||
Comment on attachment 9231303 [details]
Bug 1715434 - Regression test for content scripts. r=john.bieling
[Approval Request Comment]
Regression caused by (bug #):
User impact if declined:
content scripts cannot be registered
Testing completed (on c-c, etc.):
Risk to taking this patch (and alternatives if risky):
The test has a small chance of failing, Geoff will look at it later.
Comment 13•4 years ago
|
||
Comment on attachment 9231304 [details]
Bug 1715434 - Update compose/message display script loading behaviour to match content scripts. r=john.bieling
[Approval Request Comment]
Regression caused by (bug #):
User impact if declined:
content scripts cannot be registered
Testing completed (on c-c, etc.):
Risk to taking this patch (and alternatives if risky):
Low.
Comment 14•4 years ago
|
||
Comment on attachment 9231304 [details]
Bug 1715434 - Update compose/message display script loading behaviour to match content scripts. r=john.bieling
[Triage Comment]
Approved for beta
Comment 15•4 years ago
|
||
Comment on attachment 9231303 [details]
Bug 1715434 - Regression test for content scripts. r=john.bieling
[Triage Comment]
Approved for beta
Comment 16•4 years ago
|
||
bugherder uplift |
Comment 17•4 years ago
|
||
Comment on attachment 9231130 [details]
Bug 1715434 - In Thunderbird, consider some extra message manager groups when injecting WebExt content scripts. r=zombie
Clearing the approval flag to get this off the needs-uplift radar.
Description
•