Bug 1715434 - In Thunderbird, consider some extra message manager groups when injecting WebExt content scripts. r=zombie a=pascalc

Thunderbird uses these extra groups for special handling of links, and they need to be considered the same as the browsers group for WebExtensions purposes.

Differential Revision: https://phabricator.services.mozilla.com/D119874